<resources>
    <string name="app_name">CompleteAndroidKnowledge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login-->
    <string name="document_number">User ID</string>
    <string name="document_number_user">Document Type</string>
    <string name="document_type">User Type</string>
    <string name="password_user">Password</string>
    <string name="salute_user">User ID: </string>

    <string name="action_next">Continue</string>
    <string name="action_login">Sign in</string>
    <string name="more_information">More information</string>
    <string name="open_product_button">Open product button</string>

    <!--Predefined Strings -->
    <string name="maskedProductId">****%s</string>
    <string name="status_activated">ACTIVE</string>
    <string name="status_canceled">CANCELED</string>
    <string name="status_blocked">LOCKED</string>
    <string name="status_default">ARREARS</string>
    <string name="status_inactive">INACTIVE</string>

    <string name="product_1">Saving Account</string>
    <string name="product_2">Salary Account</string>
    <string name="product_3">Credit Card</string>
    <string name="product_4">Loan</string>
    <string name="product_5">Inversion Account</string>

    <string name="product_balance_format">$%s</string>
    <string name="format_balance">###,###,##0.00</string>
    <string name="Error_product_summary">Please, try again</string>
    <string name="txtTryAgain">Retry</string>
    <string name="icon_bank">ICON_BANK</string>
    <string name="product_status">Status</string>
    <string name="bank_type">Type</string>
    <string name="more_details">More Details</string>

    <!--Footer-->
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="news">News</string>
    <string name="localization">Maps</string>
    <string name="more">More</string>
    <string name="more_information_product">MORE INFORMATION</string>
    <string name="products_imag">Products Imag</string>
    <string name="generic_error">We are so sorry, there was a problem!</string>
    <string name="step_one_image">STEP_ONE_IMAGE</string>
    <string name="step_two_image">STEP TWO IMAGE</string>
    <string name="step_three_image">STEP THREE IMAGE</string>

    <!--WORDS FOR FLOW-->
    <string name="action_buy">Buy</string>


</resources>
