<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/step_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_step_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/step_two"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/step_one_image"
            app:tint="@color/colorPrimary" />

        <ImageView
            android:id="@+id/step_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_step_two"
            app:layout_constraintStart_toEndOf="@+id/step_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/step_three"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/step_two_image"
            app:tint="@color/disabled_button_color" />

        <ImageView
            android:id="@+id/step_three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_step_three"
            app:layout_constraintStart_toEndOf="@+id/step_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/step_three_image"
            app:tint="@color/disabled_button_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>