<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.completeandroidknowledge.publicSection.feature01Login.viewModel.LoginViewModel"/>
    </data>

    <!--<data>
        <variable
            name="User"
            type="com.example.completeandroidknowledge.section1.model.User"/>
    </data>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/type_doc_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/type_doc_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/document_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/type_doc_edit"
                android:layout_width="0dp"
                android:inputType="text"
                android:text="@{loginViewModel.userType}"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_doc_text" />

            <!--<EditText
                android:id="@+id/type_doc_edit"
                android:layout_width="0dp"
                android:inputType="text"
                android:text="@={User.type}"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_doc_text" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/number_doc_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_doc_container"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/number_doc_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/document_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

           <EditText
                android:id="@+id/text_doc_edit"
                android:layout_width="0dp"
                android:inputType="text"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_doc_text" />
            <!--<EditText
                android:id="@+id/text_doc_edit"
                android:layout_width="0dp"
                android:inputType="text"
                android:text="@={User.document}"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_doc_text" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_next"
            android:id="@+id/next_user_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/number_doc_container"
            app:layout_constraintStart_toStartOf="@+id/number_doc_container"
            app:layout_constraintTop_toBottomOf="@+id/number_doc_container"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
