<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="UserViewModel"
            type="com.example.completeandroidknowledge.sectionPublic.feature01User.viewModel.UserViewModel" />

        <variable
            name="Validator"
            type="com.example.completeandroidknowledge.sectionPublic.feature01User.validator.UserValidator" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/type_doc_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_input_height"
                android:layout_marginTop="@dimen/border_input_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <EditText
                    android:id="@+id/password_edit"
                    android:inputType="textPassword"
                    android:text="@{UserViewModel.user.userPassword}"
                    android:afterTextChanged="@{Validator::passwordValidator}"
                    android:importantForAutofill="no"
                    style="@style/defaultTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:layout_marginTop="@dimen/input_top_margin"
                    android:paddingStart="@dimen/input_start_padding"
                    android:paddingEnd="@dimen/input_end_padding"/>

                <TextView
                    android:id="@+id/type_doc_text"
                    android:text="@string/password_user"
                    android:labelFor="@+id/password_edit"
                    style="@style/defaultLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/label_start_margin"
                    android:layout_marginTop="@dimen/label_top_margin"
                    android:background="@color/white" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:id="@+id/login_button"
            android:enabled="@{Validator.isFormValid}"
            app:layout_constraintEnd_toEndOf="@+id/password_container"
            app:layout_constraintStart_toStartOf="@+id/password_container"
            app:layout_constraintTop_toBottomOf="@+id/password_container"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_style_default"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/salute_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/salute_user"
                style="@style/defaultLabelStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/defaultTextStyle"
                android:text="@{UserViewModel.user.userDocument}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/salute_text"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loadingProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
